# pipeline-poc

./: .env.example  .gitignore  README.md  docker-compose.yml
api_document/: Dockerfile  README.md  pyproject.toml  requirements.txt
api_document/api_document/: main.py
api_document/scripts/: build.sh
boostrap-data/: README.md  run.sh
boostrap_data/: README.md  datasets  gov.sh  manifest.json  papers.sh
bootstrap_tests/: README.md  test_kafka.py  test_minio.py  test_pdfplumber.py  test_pg_connection.py  test_weaviate_connection.py
ops_jaeger/: config.yaml  ui-config.json
ops_otel/: config.yaml
ops_prometheus/: prometheus.yml
scratchpad/: README.md  requirements.txt  test_kafka.py  test_minio.py  test_pdfplumber.py
scripts/: build.sh  down.sh  trigger-ingest.sh  up.sh
service_embed_documents/: Dockerfile  README.md  pyproject.toml  requirements.txt
service_embed_documents/embed_documents/: main.py
service_embed_documents/scripts/: build.sh
service_ingest_documents/: Dockerfile  README.md  pyproject.toml  requirements.txt
service_ingest_documents/ingest_documents/: main.py
service_ingest_documents/scripts/: build.sh
specs/: initial_plan.md
ui_chat/: Dockerfile  README.md  pyproject.toml  requirements.txt
ui_chat/scripts/: build.sh
ui_chat/ui_chat/: main.py
ui_embeddings/: Dockerfile  README.md  pyproject.toml  requirements.txt
ui_embeddings/scripts/: build.sh
ui_embeddings/ui_embeddings/: main.py
