[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingest_documents"
version = "0.1.0"
dependencies = [
    # intentionally different lib from the API endpoint
    "confluent-kafka==2.11.1",
    "boto3==1.40.40",
    "boto3-stubs[s3]==1.40.40",
    "opentelemetry-sdk==1.37.0",
    "opentelemetry-exporter-otlp==1.37.0",
    "Deprecated==1.2.18",
]

[project.optional-dependencies]
dev = [
    "black==25.9.0",
    "isort==6.0.1",
    "build==1.3.0",
    "pip-tools==7.5.0",
    "mypy==1.18.2",
]
